# PhysicsFormulaClass_lessDependecnies

./: Angle.cpp  Angle.h  AtomicPhysics.h  BinarySearchTree.h  BinarySpacePartition.h  Boundries.h  Bounds.h  CMakeLists.txt  Calculus.h  CapacitorNode.h  Circle.h  CircuitBoard.h  Circuits.h  Cone.h  Constants.h  Convexhull.cpp  Convexhull.h  Core.h  Cube.h  Cylinder.h  Derivation.h  Dimensions.h  Distance.cpp  Distance.h  Drag.h  DynamicsAndForces.h  ETL.h  Elasticity.h  ElectricCharge.h  ElectricCurrent.h  ElectricField.h  ElectricPotential.h  ElectroMagneticInduction.h  ElectroMagneticWaves.h  Element.h  Energy.h  EuclideanGraph.h  FluidDynamics.h  FluidStatics.h  Forces.h  (+92 more)
includes/SFML/: readme.md
includes/SFML/doc/html/: Config_8hpp_source.html  Event_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Vector2_8hpp_source.html  Vector3_8hpp_source.html  WindowHandle_8hpp_source.html  classsf_1_1CircleShape.html  classsf_1_1ConvexShape.html  classsf_1_1Cursor.html  classsf_1_1Image.html  classsf_1_1Joystick-members.html  classsf_1_1Joystick.html  classsf_1_1Keyboard-members.html  classsf_1_1Keyboard.html  classsf_1_1Listener.html  classsf_1_1Music.html  classsf_1_1Rect.html  classsf_1_1RectangleShape.html  classsf_1_1RenderWindow.html  classsf_1_1Shape.html  classsf_1_1Sound.html  classsf_1_1SoundSource.html  classsf_1_1SoundStream.html  classsf_1_1Sprite.html  classsf_1_1Text.html  classsf_1_1Texture.html  classsf_1_1Transform.html  classsf_1_1Transformable.html  classsf_1_1Utf.html  classsf_1_1Vector2-members.html  classsf_1_1Vector2.html  classsf_1_1Vector3-members.html  classsf_1_1Vector3.html  classsf_1_1View.html  functions_eval_x.html  functions_eval_y.html  functions_eval_z.html  functions_x.html  functions_y.html  (+10 more)
includes/SFML/examples/shader/resources/: billboard.geom  pixelate.frag
includes/SFML/include/SFML/: Config.hpp
includes/SFML/include/SFML/Graphics/: Font.hpp  Glsl.inl  Image.hpp  Rect.hpp  RenderWindow.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  View.hpp
includes/SFML/include/SFML/System/: Utf.hpp  Vector2.hpp  Vector3.hpp
includes/SFML/include/SFML/Window/: ContextSettings.hpp  Cursor.hpp  Event.hpp  Joystick.hpp  Keyboard.hpp  WindowHandle.hpp
includes/eigen-3.3.7/Eigen/src/SVD/: BDCSVD.h
includes/eigen-3.3.7/debug/gdb/: printers.py
includes/eigen-3.3.7/doc/: QuickReference.dox
includes/eigen-3.3.7/scripts/: relicense.py
